Added metadata information about the role.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,7 +27,7 @@ galaxy_info:
   # this branch. If Travis integration is configured, only notifications for this
   # branch will be accepted. Otherwise, in all cases, the repo's default branch
   # (usually master) will be used.
-  #github_branch:
+  github_branch: https://github.com/trikorasolns/ansible-galaxy-dhcpd
 
   #
   # Provide a list of supported platforms, and for each platform a list of versions.
@@ -35,17 +35,10 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+   platforms:
+   - name: CentOS
+     versions:
+       - 7
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
