--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,7 +27,7 @@ galaxy_info:
   # this branch. If Travis integration is configured, only notifications for this
   # branch will be accepted. Otherwise, in all cases, the repo's default branch
   # (usually master) will be used.
-  github_branch: https://github.com/trikorasolns/ansible-galaxy-dhcpd
+  # github_branch: https://github.com/trikorasolns/ansible-galaxy-dhcpd
 
   #
   # Provide a list of supported platforms, and for each platform a list of versions.
