--- a/meta/main.yml
+++ b/meta/main.yml
@@ -35,12 +35,14 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-   platforms:
-   - name: CentOS
-     versions:
-       - 7
+  platforms:
+    - name: CentOS
+      versions:
+        - 7
 
-  galaxy_tags: []
+  galaxy_tags:
+    - dhcp
+    - networking
     # List tags for your role here, one per line. A tag is a keyword that describes
     # and categorizes the role. Users find roles by searching for tags. Be sure to
     # remove the '[]' above, if you add tags to this list.
