--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 # tasks file for dhcpd
-- include_vars: "{{ item }}"
+- include_vars: Include vars from OS name and version.
   with_first_found:
-    - "{{ansible_distribution}}-{{ansible_distribution_major_version}}.yml"
+    - "{{ ansible_distribution }}-{{ansible_distribution_major_version}}.yml"
     - "{{ ansible_distribution }}.yml"
     - "{{ ansible_os_family }}.yml"
 - name: Install dhcp packages
   package:
-    name: "{{dhcp_packages}}"
+    name: "{{ dhcp_packages }}"
     state: present
   become: yes
 - name: Apply template
@@ -16,7 +16,7 @@
     dest: "/etc/dhcp/dhcpd.conf"
     owner: root
     group: root
-    mode: 644
+    mode: 0644
     backup: yes
   become: yes
   notify: Restart dhcpd
