Fix ansible galaxy import warnings.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: A. C.
-  description: Enterprise Asset Management and Service Desk Consultant. IaC evangelist.
+  description: Enterprise Asset Management and Service Desk consultant. IaC evangelist.
   company: Trikora Solutions SL
 
   # If the issue tracker for your role is not on github, uncomment the
