--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,7 @@
   become: yes
 - name: Apply template
   template:
-    src: "../templates/dhcpd.conf.j2"
+    src: "templates/dhcpd.conf.j2"
     dest: "/etc/dhcp/dhcpd.conf"
     owner: root
     group: root
